--- a/my-music-player/index.html
+++ b/my-music-player/index.html
@@ -19,7 +19,7 @@
         <h2 id="title">Electric Chill Machine</h2>
         <h3 id="artist">jacinto</h3>
         <audio src="music/jacinto-1.mp3"></audio>
-        <!-- Progress -->
+        <!-- their all the thing regarding to Progress  -->
         <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
                 <div class="duration-wrapper">
@@ -28,15 +28,15 @@
                 
             </div>
         </div>
-        <!-- Note: controls allow us to controls our audio file on the web/wesbsite we created. -->
+        <!-- Note: controls allow us to controls our audio file on the web/wesbsite we created. it very usefull to use that  -->
          <!-- Controls -->
-       <div class="player-controls">
+       <div class="player-controls ">
         <i class="fas fa-backward" id="prev" title="previous"></i>
         <i class="fas fa-play  main-button" id="play" title="play"></i>
         <i class="fas fa-forward" id="next" title="next"></i>
         
 
-       </div>
+       </div> 
     </div>
 
 
